# libcorerc

./: CMakeLists.txt  README.md
include/corerc/: corerc.h  pubsub.h
schema/: Message.capnp  Time.capnp  pubsub.capnp
src/: main.cpp  pubsub.cpp
